--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=notification-service
+
+spring.main.banner-mode=off
+
+supmap.properties.database-name=${DATABASE_NAME}
+supmap.properties.elasticsearch-password=${ELASTICSEARCH_PASSWORD}
+supmap.properties.elasticsearch-url=${ELASTICSEARCH_URL}
+supmap.properties.elasticsearch-username=${ELASTICSEARCH_USERNAME}
+supmap.properties.kafka-bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS}
+supmap.properties.mongo-uri=${MONGO_URI}
+
+spring.kafka.consumer.bootstrap-servers=kafka-broker.railway.internal:9092
+spring.kafka.consumer.group-id=notification-service-group
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
+logging.level.org.apache.kafka=INFO
+logging.level.org.springframework.kafka=DEBUG
