--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,10 @@ services:
     ports:
       - "8084:8080"
     environment:
-      - PORT=${{ shared.PORT }}
-      - SPRING_DATASOURCE_URL=${{ shared.NOTIFICATION_DB_URL }}
-      - SPRING_DATASOURCE_USERNAME=${{ shared.NOTIFICATION_DB_USERNAME }}
-      - SPRING_DATASOURCE_PASSWORD=${{ shared.NOTIFICATION_DB_PASSWORD }}
+      - DATABASE_NAME=${{ shared.DATABASE_NAME }}
+      - ELASTICSEARCH_PASSWORD=${{ shared.ELASTICSEARCH_PASSWORD }}
+      - ELASTICSEARCH_URL=${{ shared.ELASTICSEARCH_URL }}
+      - ELASTICSEARCH_USERNAME=${{ shared.ELASTICSEARCH_USERNAME }}
       - KAFKA_BOOTSTRAP_SERVERS=${{ shared.KAFKA_BOOTSTRAP_SERVERS }}
+      - MONGO_URI=${{ shared.MONGO_URI }}
     restart: always
