--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ supmap.properties.elasticsearch-username=${ELASTICSEARCH_USERNAME}
 supmap.properties.kafka-bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS}
 supmap.properties.mongo-uri=${MONGO_URI}
 
-spring.kafka.consumer.bootstrap-servers=kafka-broker.railway.internal:9092
+spring.kafka.consumer.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS}
 spring.kafka.consumer.group-id=notification-service-group
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
@@ -17,3 +17,8 @@ spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.S
 
 logging.level.org.apache.kafka=INFO
 logging.level.org.springframework.kafka=DEBUG
+
+management.endpoints.web.exposure.include=health,info,prometheus,metrics
+management.endpoint.health.show-details=always
+management.metrics.enable.all=true
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
